--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,17 @@
 # Node modules
 node_modules/
-frontend/node_modules/
-backend/node_modules/
-
-# Build folders
-frontend/dist/
-frontend/build/
-backend/dist/
-backend/build/
-
-# Environment variables
-*.env
 
 # Logs
-*.log
+npm-debug.log
+yarn-error.log
 
-# Vite / temporary files
-.vite/
+# Build output
+dist/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
