--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^4.18.2",
     "yup": "^1.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
