--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "yup": "^1.7.1"
   }
 }
