--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "react-hot-toast": "^2.6.0"
+    "axios": "^1.13.5",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-hot-toast": "^2.6.0",
+    "yup": "^1.7.1"
   }
 }
