--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "react-hot-toast": "^2.6.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
